// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkCheckboxCard (compound component) should render correctly when checked 1`] = `
<DocumentFragment>
  <div
    aria-checked="true"
    aria-describedby=":r4:"
    aria-labelledby=":r3:"
    class="bpk-checkbox-card-root bpk-checkbox-card-root--on-canvas-default bpk-checkbox-card-root--radius-rounded bpk-checkbox-card-root--size-md bpk-checkbox-card-root--checked"
    role="checkbox"
    tabindex="0"
  >
    <input
      aria-hidden="true"
      checked=""
      class="bpk-checkbox-card-control"
      tabindex="-1"
      type="checkbox"
      value=""
    />
    <div
      class="bpk-checkbox-card-content bpk-checkbox-card-content--size-md"
    >
      <div
        class="bpk-checkbox-card-label"
      >
        <span
          class="bpk-text bpk-text--heading-5"
          data-backpack-ds-component="Text"
          id=":r3:"
          style="display: -webkit-box; -webkit-line-clamp: 2; overflow: hidden; width: 100%;"
        >
          Select option
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkCheckboxCard (compound component) should render correctly when disabled 1`] = `
<DocumentFragment>
  <div
    aria-checked="false"
    aria-describedby=":r7:"
    aria-disabled="true"
    aria-labelledby=":r6:"
    class="bpk-checkbox-card-root bpk-checkbox-card-root--on-canvas-default bpk-checkbox-card-root--radius-rounded bpk-checkbox-card-root--size-md bpk-checkbox-card-root--disabled"
    role="checkbox"
    tabindex="-1"
  >
    <input
      aria-hidden="true"
      class="bpk-checkbox-card-control"
      disabled=""
      tabindex="-1"
      type="checkbox"
      value=""
    />
    <div
      class="bpk-checkbox-card-content bpk-checkbox-card-content--size-md"
    >
      <div
        class="bpk-checkbox-card-label"
      >
        <span
          class="bpk-text bpk-text--heading-5"
          data-backpack-ds-component="Text"
          id=":r6:"
          style="display: -webkit-box; -webkit-line-clamp: 2; overflow: hidden; width: 100%;"
        >
          Select option
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkCheckboxCard (compound component) should render correctly with all content slots 1`] = `
<DocumentFragment>
  <div
    aria-checked="false"
    aria-describedby=":ra:"
    aria-labelledby=":r9:"
    class="bpk-checkbox-card-root bpk-checkbox-card-root--on-canvas-default bpk-checkbox-card-root--radius-rounded bpk-checkbox-card-root--size-md"
    role="checkbox"
    tabindex="0"
  >
    <input
      aria-hidden="true"
      class="bpk-checkbox-card-control"
      tabindex="-1"
      type="checkbox"
      value=""
    />
    <div
      class="bpk-checkbox-card-content bpk-checkbox-card-content--size-md"
    >
      <div
        class="bpk-checkbox-card-label"
      >
        <span
          class="bpk-text bpk-text--heading-5"
          data-backpack-ds-component="Text"
          id=":r9:"
          style="display: -webkit-box; -webkit-line-clamp: 2; overflow: hidden; width: 100%;"
        >
          City Centre
        </span>
      </div>
      <div
        class="bpk-checkbox-card-description"
      >
        <span
          class="bpk-text bpk-text--body-default"
          data-backpack-ds-component="Text"
          id=":ra:"
          style="display: -webkit-box; -webkit-line-clamp: 3; overflow: hidden; width: 100%;"
        >
          Central location
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkCheckboxCard (compound component) should render correctly with minimal props 1`] = `
<DocumentFragment>
  <div
    aria-checked="false"
    aria-describedby=":r1:"
    aria-labelledby=":r0:"
    class="bpk-checkbox-card-root bpk-checkbox-card-root--on-canvas-default bpk-checkbox-card-root--radius-rounded bpk-checkbox-card-root--size-md"
    role="checkbox"
    tabindex="0"
  >
    <input
      aria-hidden="true"
      class="bpk-checkbox-card-control"
      tabindex="-1"
      type="checkbox"
      value=""
    />
    <div
      class="bpk-checkbox-card-content bpk-checkbox-card-content--size-md"
    >
      <div
        class="bpk-checkbox-card-label"
      >
        <span
          class="bpk-text bpk-text--heading-5"
          data-backpack-ds-component="Text"
          id=":r0:"
          style="display: -webkit-box; -webkit-line-clamp: 2; overflow: hidden; width: 100%;"
        >
          Select option
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkCheckboxCard (compound component) should render disabled and checked state correctly 1`] = `
<DocumentFragment>
  <div
    aria-checked="true"
    aria-describedby=":rp:"
    aria-disabled="true"
    aria-labelledby=":ro:"
    class="bpk-checkbox-card-root bpk-checkbox-card-root--on-canvas-default bpk-checkbox-card-root--radius-rounded bpk-checkbox-card-root--size-md bpk-checkbox-card-root--checked bpk-checkbox-card-root--disabled"
    role="checkbox"
    tabindex="-1"
  >
    <input
      aria-hidden="true"
      checked=""
      class="bpk-checkbox-card-control"
      disabled=""
      tabindex="-1"
      type="checkbox"
      value=""
    />
    <div
      class="bpk-checkbox-card-content bpk-checkbox-card-content--size-md"
    >
      <div
        class="bpk-checkbox-card-label"
      >
        <span
          class="bpk-text bpk-text--heading-5"
          data-backpack-ds-component="Text"
          id=":ro:"
          style="display: -webkit-box; -webkit-line-clamp: 2; overflow: hidden; width: 100%;"
        >
          Disabled selected
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkCheckboxCard (compound component) should render onCanvasContrast variant correctly 1`] = `
<DocumentFragment>
  <div
    aria-checked="false"
    aria-describedby=":rg:"
    aria-labelledby=":rf:"
    class="bpk-checkbox-card-root bpk-checkbox-card-root--on-canvas-contrast bpk-checkbox-card-root--radius-rounded bpk-checkbox-card-root--size-md"
    role="checkbox"
    tabindex="0"
  >
    <input
      aria-hidden="true"
      class="bpk-checkbox-card-control"
      tabindex="-1"
      type="checkbox"
      value=""
    />
    <div
      class="bpk-checkbox-card-content bpk-checkbox-card-content--size-md"
    >
      <div
        class="bpk-checkbox-card-label"
      >
        <span
          class="bpk-text bpk-text--heading-5"
          data-backpack-ds-component="Text"
          id=":rf:"
          style="display: -webkit-box; -webkit-line-clamp: 2; overflow: hidden; width: 100%;"
        >
          Select option
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkCheckboxCard (compound component) should render onCanvasDefault variant correctly 1`] = `
<DocumentFragment>
  <div
    aria-checked="false"
    aria-describedby=":rd:"
    aria-labelledby=":rc:"
    class="bpk-checkbox-card-root bpk-checkbox-card-root--on-canvas-default bpk-checkbox-card-root--radius-rounded bpk-checkbox-card-root--size-md"
    role="checkbox"
    tabindex="0"
  >
    <input
      aria-hidden="true"
      class="bpk-checkbox-card-control"
      tabindex="-1"
      type="checkbox"
      value=""
    />
    <div
      class="bpk-checkbox-card-content bpk-checkbox-card-content--size-md"
    >
      <div
        class="bpk-checkbox-card-label"
      >
        <span
          class="bpk-text bpk-text--heading-5"
          data-backpack-ds-component="Text"
          id=":rc:"
          style="display: -webkit-box; -webkit-line-clamp: 2; overflow: hidden; width: 100%;"
        >
          Select option
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkCheckboxCard (compound component) should render onSurfaceContrast variant correctly 1`] = `
<DocumentFragment>
  <div
    aria-checked="false"
    aria-describedby=":rj:"
    aria-labelledby=":ri:"
    class="bpk-checkbox-card-root bpk-checkbox-card-root--on-surface-contrast bpk-checkbox-card-root--radius-rounded bpk-checkbox-card-root--size-md"
    role="checkbox"
    tabindex="0"
  >
    <input
      aria-hidden="true"
      class="bpk-checkbox-card-control"
      tabindex="-1"
      type="checkbox"
      value=""
    />
    <div
      class="bpk-checkbox-card-content bpk-checkbox-card-content--size-md"
    >
      <div
        class="bpk-checkbox-card-label"
      >
        <span
          class="bpk-text bpk-text--heading-5"
          data-backpack-ds-component="Text"
          id=":ri:"
          style="display: -webkit-box; -webkit-line-clamp: 2; overflow: hidden; width: 100%;"
        >
          Select option
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkCheckboxCard (compound component) should render square radius correctly 1`] = `
<DocumentFragment>
  <div
    aria-checked="false"
    aria-describedby=":rm:"
    aria-labelledby=":rl:"
    class="bpk-checkbox-card-root bpk-checkbox-card-root--on-canvas-default bpk-checkbox-card-root--radius-square bpk-checkbox-card-root--size-md"
    role="checkbox"
    tabindex="0"
  >
    <input
      aria-hidden="true"
      class="bpk-checkbox-card-control"
      tabindex="-1"
      type="checkbox"
      value=""
    />
    <div
      class="bpk-checkbox-card-content bpk-checkbox-card-content--size-md"
    >
      <div
        class="bpk-checkbox-card-label"
      >
        <span
          class="bpk-text bpk-text--heading-5"
          data-backpack-ds-component="Text"
          id=":rl:"
          style="display: -webkit-box; -webkit-line-clamp: 2; overflow: hidden; width: 100%;"
        >
          Select option
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkCheckboxCard (compound component) should render with extremely long label text 1`] = `
<DocumentFragment>
  <div
    aria-checked="false"
    aria-describedby=":r1n:"
    aria-labelledby=":r1m:"
    class="bpk-checkbox-card-root bpk-checkbox-card-root--on-canvas-default bpk-checkbox-card-root--radius-rounded bpk-checkbox-card-root--size-md"
    role="checkbox"
    tabindex="0"
  >
    <input
      aria-hidden="true"
      class="bpk-checkbox-card-control"
      tabindex="-1"
      type="checkbox"
      value=""
    />
    <div
      class="bpk-checkbox-card-content bpk-checkbox-card-content--size-md"
    >
      <div
        class="bpk-checkbox-card-label"
      >
        <span
          class="bpk-text bpk-text--heading-5"
          data-backpack-ds-component="Text"
          id=":r1m:"
          style="display: -webkit-box; -webkit-line-clamp: 2; overflow: hidden; width: 100%;"
        >
          This is an extremely long label that will definitely exceed the maximum line count and should be truncated
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
